feat: implement AI-powered career image generation system
- Add comprehensive career image generator with multiple AI service fallbacks
- Integrate Google Gemini API for image analysis and prompt generation
- Support for Google Cloud Imagen 4, HuggingFace, Replicate, and OpenAI
- Enhanced demo AI visualization with SVG career composites
- Add comprehensive error handling and graceful degradation
- Include detailed documentation for setup and configuration
- Add AI-powered quiz system integration
- South African context-aware career professional styling

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@google-cloud/aiplatform": "^5.7.0",
     "@google/generative-ai": "^0.24.1",
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "@googlemaps/js-api-loader": "^1.16.10",
