--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+node_modules
 /.pnp
 .pnp.js
 
@@ -10,6 +11,7 @@
 
 # next.js
 /.next/
+.next
 /out/
 
 # production
@@ -24,13 +26,17 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+*.log
 
 # env files (IMPORTANT: Contains API keys and secrets)
-.env*
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Allow .env.example (template file without secrets)
+!.env.example
 
 # vercel
 .vercel
