--- a/.gitignore
+++ b/.gitignore
@@ -2,41 +2,22 @@
 
 # dependencies
 /node_modules
-node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # next.js
 /.next/
-.next
 /out/
 
 # production
 /build
-
-# misc
-.DS_Store
-*.pem
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-*.log
 
-# env files (IMPORTANT: Contains API keys and secrets)
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Allow .env.example (template file without secrets)
-!.env.example
+# env files
+.env*
 
 # vercel
 .vercel
@@ -44,35 +25,3 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-
-# IDEs and editors
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Firebase
-.firebase/
-firebase-debug.log
-firestore-debug.log
-ui-debug.log
-
-# Google Cloud
-google-cloud-key.json
-service-account-key.json
-*.key.json
-
-# Local development
-.cache/
-.temp/
-.tmp/
