--- a/.env.example
+++ b/.env.example
@@ -12,18 +12,13 @@ NEXT_PUBLIC_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
 
 # Firebase Configuration
 # Get these values from your Firebase project settings
-# Google Maps Platform (for location features)
-GOOGLE_MAPS_API_KEY= "AIzaSyB3uVNXSR5AcUcaJW6feJQDmEWPLIb6THI"
-NEXT_PUBLIC_GOOGLE_MAPS_API_KEY= "AIzaSyB3uVNXSR5AcUcaJW6feJQDmEWPLIb6THI"
-
-# Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyCitjhMuXtC_zO5P92-imsPvlfsiP-Mv6c"
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="twana-afrika.firebaseapp.com"
-NEXT_PUBLIC_FIREBASE_PROJECT_ID="twana-afrika"
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="twana-afrika.firebasestorage.app"
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID="490859280265"
-NEXT_PUBLIC_FIREBASE_APP_ID="1:490859280265:web:f909ba7219f7b8e8699358"
-NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-5JYKDXH3B0"
+NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key_here
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your-project-id.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=your-project-id
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your-project-id.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
+NEXT_PUBLIC_FIREBASE_APP_ID=your_firebase_app_id
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
 # Additional API keys (add as needed)
 # TWILIO_ACCOUNT_SID=your_twilio_sid_here
