--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "tts.js": "^0.1.0",
     "twilio": "^5.10.1",
     "vaul": "^0.9.9",
     "zod": "3.25.67"
